<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/heading_title"
        android:background="@drawable/heads_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:padding="@dimen/general_margin"      
        android:textAllCaps="true"
        android:textColor="@color/icons"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/typo_body" />    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/divider"
        android:dividerPadding="@dimen/general_margin" >

        <EditText
            android:id="@+id/et_billno"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="3"
            android:hint="@string/text_billno"
            android:textColor="@color/icons"
            android:textSize="@dimen/typo_body"
            android:ems="10" >
        </EditText>

        <ProgressBar
            android:id="@+id/waitSpin"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/et_pickdate"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/text_pickdate"
            android:textColor="@color/icons"
            android:textSize="@dimen/typo_body" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:text="@string/text_find"
            android:textColor="@color/icons"
            android:textSize="@dimen/typo_button"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/icons"
            android:text="@string/text_find_result"
            android:textSize="@dimen/typo_subheading" />

    </LinearLayout>
    
	<TableLayout
		android:id="@+id/table_invoice_details"
		android:layout_marginTop="@dimen/activity_margin"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:divider="@drawable/shape_border"
  		android:showDividers="beginning"  
	    android:stretchColumns="1">
	    
	</TableLayout>    
      
</LinearLayout>
